Update to AsyncApi 3.0 (#507)
* feat(ui): prepare springwolf for AsyncApi 3.0 (wip)

feat(ui): remove testing code

feat(ui): remove asyncApi 2.0 hint about publish/subscribe

feat(ui): add parsing error boundary

feat(ui): add license chip

feat(ui): add notification.service.ts

feat(ui): rename Channel to ChannelOperation

also fix bindings

feat(ui): update asyncapi mapper (wip)

feat(ui): add todos

feat(ui): update asyncapi models to v3

chore(ui): split model packages

chore(ui): download asyncapi document only once

refactor(ui): re-organize components

chore(ui): use asyncapi v3 mock

chore(ui): remove IE support

chore(ui): move favicon.ico to assets

* feat(asyncapi): update package description

* feat(asyncapi): add todos

* Enhancement: Add More Spec Details to the UI (#517)

* test: ignore line ending in generated specs assertions

Is failing in Windows OS

Refs #378

* refactor(kafka): add primitive payload, example of `minimum` value

To visualize in UI

Refs #378

test(kafka): add primitive types

More data to demonstrate + type badges check

* refactor(ui): add schema properties template

To reuse for primitive types

Refs #378

* feat(ui): add `type` badge to schema payload header

 No intuitive way to check whether the payload is an objects or a string

Refs #378

* feat(ui): add minimum and maximum values to the spec`s model

Feature request

Refs #378

* feat(ui): display primitive type info

Feature request.
Only properties has info displayed

Refs #378

* feat(ui): display minimum and maximum values

Feature request.

Refs #378

* Revert "test: ignore line ending in generated specs assertions"

This reverts commit 07a6b30d9d43ff66910ba4e6edbfd15e578c851d.

* feat: Replaced usage of jAsyncAPI by the new springwolf-asyncapi module (#523)

* feat: Replaced usage of jAsyncAPI by the new springwolf-asyncapi module

We migrate from jAsyncAPI, with support 