@@ -1,14 +1,13 @@
 // SPDX-License-Identifier: Apache-2.0
 package io.github.stavshamir.springwolf.asyncapi.scanners.channels;
 
-import com.asyncapi.v2._6_0.model.channel.ChannelItem;
 import io.github.stavshamir.springwolf.asyncapi.scanners.classes.ClassScanner;
+import io.github.stavshamir.springwolf.asyncapi.v3.model.channel.ChannelObject;
 import lombok.RequiredArgsConstructor;
 
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @RequiredArgsConstructor
@@ -19,19 +18,19 @@ public class SimpleChannelsScanner implements ChannelsScanner {
     private final ClassProcessor classProcessor;
 
     @Override
-    public Map<String, ChannelItem> scan() {
+    public Map<String, ChannelObject> scan() {
         Set<Class<?>> components = classScanner.scan();
 
-        List<Map.Entry<String, ChannelItem>> channels = mapToChannels(components);
+        List<Map.Entry<String, ChannelObject>> channels = mapToChannels(components);
 
-        return ChannelMerger.merge(channels);
+        return ChannelMerger.mergeChannels(channels);
     }
 
-    private List<Map.Entry<String, ChannelItem>> mapToChannels(Set<Class<?>> components) {
-        return components.stream().flatMap(classProcessor::process).collect(Collectors.toList());
+    private List<Map.Entry<String, ChannelObject>> mapToChannels(Set<Class<?>> components) {
+        return components.stream().flatMap(classProcessor::process).toList();
     }
 
     public interface ClassProcessor {
-        Stream<Map.Entry<String, ChannelItem>> process(Class<?> clazz);
+        Stream<Map.Entry<String, ChannelObject>> process(Class<?> clazz);
     }
 }
